# PrettyStrict

./: Cargo.toml  README.md
src/: check_file.rs  error.rs  lint_rules.rs  main.rs  parse_css.rs
src/CSS/: Colors.json  Props.json  Selectors.json  Units.json  Values.json
src/Rules/: check_property.rs  check_value.rs  duplicate_declaration.rs  mod.rs  unit_check.rs
src/rules/: check_property.rs  check_value.rs  duplicate_declaration.rs  unit_check.rs
