[package]
name = "PrettyStrict"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2.0.12"
cssparser = "0.35.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5.0"
lightningcss = { version = "1.0.0-alpha.53", features = ["visitor"] }
